# Handbook

./: .editorconfig  Dockerfile  README.md  biome.json  components.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
public/: command-list.json
public/commands/: 0.json  1.json
public/locales/: en.json  fil.json  id.json  ja.json  ptBR.json  ru.json  th.json  vi.json  zh.json
public/locales/donation/: en.json  fil.json  id.json  ja.json  ptBR.json  ru.json  th.json  vi.json  zh.json
public/locales/settings/: en.json  fil.json  id.json  ja.json  ptBR.json  ru.json  th.json  vi.json  zh.json
src/: i18n.ts  log.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: android.json  default.json  windows.json
src-tauri/icons/: icon.icns
src-tauri/src/: download.rs  lib.rs  log.rs  main.rs  utility.rs
src-tauri/src/api/: elaxanapi.rs
src-tauri/src/generate/: achievements.rs  artifacts.rs  characters.rs  commands.rs  dungeons.rs  handbook.rs  list.rs  materials.rs  mod.rs  monsters.rs  quests.rs  scenes.rs  weapons.rs
src-tauri/src/search/: gi.rs
src-tauri/src/structure/: gm.rs  hsr.rs  mod.rs
src-tauri/src/structure/handbook/: category.rs  commands.rs  mod.rs
src-tauri/src/structure/handbook/gi/: achievement.rs  artifacts.rs  category.rs  characters.rs  commands.rs  dungeons.rs  main_quests.rs  materials.rs  mod.rs  monsters.rs  scenes.rs  weapons.rs
src-tauri/src/structure/handbook/sr/: characters.rs  items.rs  light_cones.rs  mission.rs  mod.rs  monster.rs  relics.rs
src-tauri/src/tests/: handbook_tests.rs  mod.rs  utility_tests.rs
src/api/: elaxanApi.ts  yuukips.ts
src/components/: CommandList.tsx  LanguageSwitcher.tsx  output.tsx  theme-provider.tsx
src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  collapse.tsx  command.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  icon.tsx  input.tsx  kbd.tsx  label.tsx  link.tsx  multi-select.tsx  navigation-menu.tsx  popover.tsx  progress.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  slider.tsx  spinner.tsx  tabs.tsx  textarea.tsx  toast.tsx  toaster.tsx  toggle-icon.tsx  tooltip.tsx  use-toast.ts
src/hooks/: useLocalStorage.ts
src/lib/: WebNotSupported.tsx  getPlaformFolderSelector.ts  utils.ts
src/locales/: en.json  fil.json  id.json  index.ts  ja.json  ptBR.json  ru.json  th.json  vi.json  zh.json
src/pages/: drawer.tsx  error.tsx  updater.tsx
src/pages/404/: App.tsx  index.html  main.tsx
src/pages/commands/: App.tsx  index.html
src/pages/commands/components/: ArgsContainer.tsx  ArgsType.tsx  Tabs.tsx
src/pages/donation/: App.tsx  index.html
src/pages/download/: App.tsx  index.html  main.tsx
src/pages/download/resources/: resources-gi.json  resources-sr.json
src/pages/generate/: App.tsx  index.html  main.tsx
src/pages/index/: App.tsx  index.html  main.tsx
src/pages/index/components/: CommandList.tsx  DataCard.tsx  DataCardSR.tsx  Footer.tsx  Search.tsx  cookieExpires.ts  types.ts
src/pages/settings/: App.tsx  index.html  main.tsx
src/pages/settings/components/: ListServerAvailable.tsx  SelectAccount.tsx  output.tsx  types.ts
src/styles/: index.css
src/types/: autocompleteChat.ts  category.ts  conversation.ts  gm.ts  hsr.ts  listSuggestionCommands.ts  yuukipsAccount.ts  yuukipsCommand.ts  yuukipsServer.ts
tauri-plugin-handbook-finder/: .gitignore  Cargo.toml  README.md  build.rs  package.json  rollup.config.js  tsconfig.json
tauri-plugin-handbook-finder/android/: .gitignore  build.gradle.kts
tauri-plugin-handbook-finder/permissions/: default.toml
tauri-plugin-handbook-finder/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
(+6 files in other folders)
