[package]
name = "handbook-finder"
version = "1.0.0"
description = "Find ID on Handbook"
authors = ["you"]
edition = "2021"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "handbook_finder_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
phf = { version = "0.11", features = ["macros"] }
reqwest =  { version = "0.12", default-features = false, features = ["rustls-tls"] }
lazy_static = "1.5"
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
thiserror = "1.0"
tauri-plugin-dialog = "2.0.0-rc.0"
chrono = "0.4"
colored = "2.1"
tauri-plugin-os = "2.0.0-rc.0"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.10"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0.0-rc.0"
