cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "handbook-finder"
version = "0.1.1"
description = "Find ID on Handbook"
authors = ["ElaXan <zero@elaxan.com>"]
edition = "2021"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true
rustflags = ["-Zthreads=8"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"]
trim-paths = "all"

[lib]
name = "handbook_finder_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
phf = { version = "0.11", features = ["macros"] }
lazy_static = "1.5"
tauri-plugin-clipboard-manager = "2.0.0-rc.2"
thiserror = "1.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-os = "2.0.0"
tauri-plugin-log = "2.0.0"
log = "0.4"
futures = "0.3"
tauri-plugin-http = "2.0.0"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.13"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0.1"

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-handbook-finder = { path = "../tauri-plugin-handbook-finder" }
